--- a/Class Management/Class Management.csproj
+++ b/Class Management/Class Management.csproj
@@ -53,6 +53,9 @@
     <Reference Include="MahApps.Metro.Resources">
       <HintPath>C:\Users\Shubham\Downloads\MahApps.Metro-master (1)\MahApps.Metro-master\MahApps.Metro.Resources\bin\Debug\MahApps.Metro.Resources.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -99,6 +102,7 @@
     <Compile Include="MessageDialog.xaml.cs">
       <DependentUpon>MessageDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Student.cs" />
     <Compile Include="ReminderDialog.xaml.cs">
       <DependentUpon>ReminderDialog.xaml</DependentUpon>
     </Compile>
