--- a/Class Management/packages.config
+++ b/Class Management/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.3.0-ALPHA165" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net45" />
