--- a/Class Management/packages.config
+++ b/Class Management/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="MahApps.Metro" version="1.3.0-ALPHA165" targetFramework="net45" />
-  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net45" />
+  <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net45" />
-  <package id="WPFTextBoxAutoComplete" version="1.0.2" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net45" />
+  <package id="WPFTextBoxAutoComplete" version="1.0.3" targetFramework="net45" />
 </packages>
