--- a/Class Management/Class Management.csproj
+++ b/Class Management/Class Management.csproj
@@ -112,6 +112,9 @@
     <Compile Include="Views\Budget.xaml.cs">
       <DependentUpon>Budget.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\CallData.xaml.cs">
+      <DependentUpon>CallData.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DailyTimetable.xaml.cs">
       <DependentUpon>DailyTimetable.xaml</DependentUpon>
     </Compile>
@@ -169,6 +172,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Budget.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CallData.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
