--- a/Class Management/packages.config
+++ b/Class Management/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net45" />
   <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net45" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
